--- a/index.html
+++ b/index.html
@@ -213,9 +213,9 @@
                              class="w-full h-full object-cover transition-transform duration-300 hover:scale-105">
                     </div>
                     <div class="p-6">
-                        <h3 class="text-xl font-semibold mb-2">Scalable REST API Service</h3>
+                        <h3 class="text-xl font-semibold mb-2">Online Result System</h3>
                         <p class="text-gray-600 dark:text-gray-300 mb-4">
-                            Developed a high-performance microservice using Spring Boot and Hibernate for secure data management.
+                            Developed a high-performance microservice using Spring Boot and Angular.It manages student info, mark sheets, classes, timetables, and more.
                         </p>
                         <div class="flex flex-wrap gap-2 mb-4">
                             <span class="px-3 py-1 bg-gray-100 dark:bg-gray-700 rounded-full text-sm">Java</span>
@@ -223,7 +223,7 @@
                             <span class="px-3 py-1 bg-gray-100 dark:bg-gray-700 rounded-full text-sm">MySQL</span>
                         </div>
                         <div class="flex space-x-3">
-                            <a href="#" class="text-primary-light dark:text-primary-dark hover:underline">Code Repo</a>
+                            <a href="https://github.com/fighterrajput/ProjectAlpha.git" class="text-primary-light dark:text-primary-dark hover:underline">Code Repo</a>
                         </div>
                     </div>
                 </div>
@@ -235,9 +235,11 @@
                              class="w-full h-full object-cover transition-transform duration-300 hover:scale-105">
                     </div>
                     <div class="p-6">
-                        <h3 class="text-xl font-semibold mb-2">Interactive Dashboard App</h3>
+                        <h3 class="text-xl font-semibold mb-2"> College Management system </h3>
                         <p class="text-gray-600 dark:text-gray-300 mb-4">
-                            Built a responsive, data-driven user interface using Angular and Tailwind CSS, consuming REST APIs.
+                            Built a responsive, data-driven user interface, This Maven project is a college management system using MVC architecture. 
+                            It manages student info, mark sheets, classes, timetables, and more. Built with Java, HTML, Bootstrap, JavaScript, Hibernate, MySQL, JasperReports, JUnit, Servlets, and JSP, 
+                            it ensures scalability, efficiency, and comprehensive reporting
                         </p>
                         <div class="flex flex-wrap gap-2 mb-4">
                             <span class="px-3 py-1 bg-gray-100 dark:bg-gray-700 rounded-full text-sm">Angular</span>
@@ -245,7 +247,7 @@
                             <span class="px-3 py-1 bg-gray-100 dark:bg-gray-700 rounded-full text-sm">TailwindCSS</span>
                         </div>
                         <div class="flex space-x-3">
-                            <a href="#" class="text-primary-light dark:text-primary-dark hover:underline">Live Demo</a>
+                            <a href="https://github.com/fighterrajput/Project03.git" class="text-primary-light dark:text-primary-dark hover:underline">Live Demo</a>
                         </div>
                     </div>
                 </div>
@@ -416,10 +418,10 @@
                     <div class="mt-8">
                         <h4 class="font-semibold mb-4">Follow Me</h4>
                         <div class="flex space-x-4">
-                            <a href="#" class="p-3 rounded-full bg-gray-100 dark:bg-gray-700 hover:bg-gray-200 dark:hover:bg-gray-600 transition-colors">
+                            <a href=""https://github.com/fighterrajput class="p-3 rounded-full bg-gray-100 dark:bg-gray-700 hover:bg-gray-200 dark:hover:bg-gray-600 transition-colors">
                                 <i class="fab fa-github"></i>
                             </a>
-                            <a href="#" class="p-3 rounded-full bg-gray-100 dark:bg-gray-700 hover:bg-gray-200 dark:hover:bg-gray-600 transition-colors">
+                            <a href="linkedin.com/fighterrajput" class="p-3 rounded-full bg-gray-100 dark:bg-gray-700 hover:bg-gray-200 dark:hover:bg-gray-600 transition-colors">
                                 <i class="fab fa-linkedin-in"></i>
                             </a>
                             <a href="#" class="p-3 rounded-full bg-gray-100 dark:bg-gray-700 hover:bg-gray-200 dark:hover:bg-gray-600 transition-colors">
